<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/activity_view_job_description_text_view_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/image_header_top_margin"
        android:text="@string/job_escription"
        android:textSize="@dimen/stan_header_text_size"
        android:textStyle="bold"
        android:textColor="@color/dark_pink"
        />

    <TextView
        android:id="@+id/activity_view_job_description_text_view_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_spacing"
        android:layout_marginLeft="@dimen/standard_margin_left"
        android:layout_below="@id/activity_view_job_description_text_view_header"
        android:textSize="@dimen/stan_header_text_size"
        android:textStyle="bold"
        android:text="@string/title"/>

    <TextView
        android:id="@+id/activity_view_job_description_text_view_client_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_spacing"
        android:layout_marginLeft="@dimen/standard_margin_left"
        android:layout_below="@id/activity_view_job_description_text_view_title"
        android:text="@string/client_name"
        android:textStyle="bold"
        android:textSize="@dimen/stan_header_text_size"
        />

    <TextView
        android:id="@+id/activity_view_job_description_text_view_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/activity_view_job_description_text_view_client_name"
        android:text="@string/address"
        android:textSize="@dimen/stan_header_text_size"
        android:layout_marginLeft="@dimen/standard_margin_left"
        android:layout_marginTop="@dimen/standard_spacing"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/activity_view_job_description_text_view_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/activity_view_job_description_text_view_address"
        android:layout_marginLeft="@dimen/standard_margin_left"
        android:layout_marginTop="@dimen/standard_spacing"
        android:text="Description"
        android:textSize="@dimen/stan_header_text_size"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/activity_view_job_description_text_view_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/activity_view_job_description_text_view_description"
        android:layout_marginLeft="@dimen/standard_margin_left"
        android:layout_marginTop="@dimen/standard_spacing"
        android:text="Status"
        android:textSize="@dimen/stan_header_text_size"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/activity_view_job_description_text_view_accepted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/activity_view_job_description_text_view_status"
        android:layout_marginLeft="@dimen/standard_margin_left"
        android:layout_marginTop="@dimen/standard_spacing"
        android:text="Accepted"
        android:textSize="@dimen/stan_header_text_size"
        android:textStyle="bold"/>
</RelativeLayout>
